# steam-ext-tf2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
steam/ext/tf/: __init__.py  client.py  enums.py  state.py
steam/ext/tf/protobufs/: __init__.py  base_gcmessages.py  gcsdk_gcmessages.py  protobufs.py  tf_gcmessages.py
steam/ext/tf2/: __init__.py  backpack.py  client.py  currency.py  enums.py  schema.pyi  state.py  utils.py
steam/ext/tf2/protobufs/: __init__.py  base.py  base_gcmessages.py  econ.py  econ_gcmessages.py  gcsdk_gcmessages.py  gcsystem_messages.py  protobufs.py  sdk.py  struct_messages.py  system_messages.py  tf.py  tf_gcmessages.py
steam/ext/tf2/types/: schema.py
