[tool.poetry]
name = "steam-ext-tf2"
version = "1.0.0"
description = "An extension for steam.py to interact with the Team Fortress 2 Game Coordinator"
authors = ["Gobot1234"]
license = "MIT"
keywords=["tf2", "steam.py", "steam", "steamio", "steam-api"]
classifiers=[
    "Development Status :: 2 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Gobot1234/steam-ext-tf2/issues"

[tool.poetry.dependencies]
python = "^3.7"
steamio = {git = "https://github.com/Gobot1234/steam.py"}
vdf3 = "3.1.1.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
atomic = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
